# Stemperator

./: .gitignore  AGENTS.md  CHANGELOG_DEVICE_SELECTION.md  CLAUDE.md  CMakeLists.txt  INSTRUCTIES_VOOR_CURSOR.md  README.md  Stemperator_AI_Separate.lua  Stemperator_Installation.lua  TESTING.md  index.xml
.github/: copilot-instructions.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: DemucsProcessor.cpp  SeparationWorkflow.h  UVRProcessor.cpp  demucs_process.py
Source/DSP/: DemucsModel.cpp  DemucsModel.h  SpectralSeparator.h  StemSeparator.cpp
Source/GPU/: GPUBackend.cpp
Source/GUI/: BatchEditorWindow.h  PremiumLookAndFeel.h  SeparationWizard.h  StemChannel.cpp  StemChannel.h  StemMixer.cpp  StyledDialogWindow.h  Visualizer.h  WaveformView.h
analysis/: comparison-report.md  merge-plan.md
claude-snapshots/08f08f58-b95a-47bd-a332-ca903e93af7e/: 9b59c10e28658a7f@v2
claude-snapshots/1e649e5b-e059-4364-a827-d698a1bb7e90/: 32ff5fbdacc269df@v1  32ff5fbdacc269df@v2  5102ce19801da78a@v1  5102ce19801da78a@v2  59c9af84784c05ec@v1  59c9af84784c05ec@v2  71992a8058028bc8@v1  71992a8058028bc8@v10  71992a8058028bc8@v100  71992a8058028bc8@v101  71992a8058028bc8@v102  71992a8058028bc8@v103  71992a8058028bc8@v104  71992a8058028bc8@v105  71992a8058028bc8@v11  71992a8058028bc8@v12  71992a8058028bc8@v13  71992a8058028bc8@v14  71992a8058028bc8@v15  71992a8058028bc8@v16  71992a8058028bc8@v17  71992a8058028bc8@v18  71992a8058028bc8@v19  71992a8058028bc8@v2  71992a8058028bc8@v20  71992a8058028bc8@v21  71992a8058028bc8@v22  71992a8058028bc8@v23  71992a8058028bc8@v24  71992a8058028bc8@v25  71992a8058028bc8@v26  71992a8058028bc8@v27  71992a8058028bc8@v28  71992a8058028bc8@v29  71992a8058028bc8@v3  71992a8058028bc8@v30  71992a8058028bc8@v31  71992a8058028bc8@v32  71992a8058028bc8@v33  71992a8058028bc8@v34  (+91 more)
claude-snapshots/24ef2bc1-e9db-47eb-9884-1d389c325766/: 14d6f59fe2c365a8@v2  6cc3a84ab785ff34@v2  a7d793c8e8b0b723@v2  d5de6bca57579d23@v1  df0e76d2da72936c@v1  df0e76d2da72936c@v10  df0e76d2da72936c@v11  df0e76d2da72936c@v12  df0e76d2da72936c@v13  df0e76d2da72936c@v14  df0e76d2da72936c@v3  df0e76d2da72936c@v4  df0e76d2da72936c@v5  df0e76d2da72936c@v8  df0e76d2da72936c@v9
claude-snapshots/29d0d97b-80e2-4ffe-87d5-c13a495090ea/: 24017eeb7e8956ea@v1  24017eeb7e8956ea@v2  25eb4e42246e2029@v2  25eb4e42246e2029@v3  25eb4e42246e2029@v4  26541f98c078e48e@v2  26541f98c078e48e@v3  26541f98c078e48e@v4  31ac404af88e47b7@v2  31ac404af88e47b7@v3  37a1432e3abda5e1@v1  37a1432e3abda5e1@v2  37a1432e3abda5e1@v3  37a1432e3abda5e1@v4  3d0f89014165fe94@v2  41ca0871d0ed9549@v2  615ea462ab90875a@v2  9359275f880b3813@v2  9747e39407301a7a@v1  9747e39407301a7a@v2  9747e39407301a7a@v3  9e9f0208c9b1920b@v2  a2c725391e14e5c7@v2  b23cc2078595e0d3@v2  c84a5eacb9d32e94@v2  dc24f1673c97b3c7@v2  dd54250bd773f22f@v2  dd54250bd773f22f@v3  e51de13a0c446ee8@v2  f3c8ba901dd55f19@v2
claude-snapshots/3257a898-5412-4ce2-9461-785b77fb6575/: 1954c10b9fd8dc2b@v2  1a82943b715227f4@v3  1a82943b715227f4@v4  1f6fe65199b7a74a@v2  2121661887bb330f@v1  2121661887bb330f@v2  2121661887bb330f@v3  244fde3694917464@v1  25eb4e42246e2029@v2  25eb4e42246e2029@v3  25eb4e42246e2029@v4  25eb4e42246e2029@v5  2b3ec3f1f81ee08b@v3  2c57e783200a2374@v2  2dede1811657e1c9@v1  2dede1811657e1c9@v2  37a1432e3abda5e1@v2  37a1432e3abda5e1@v3  37a1432e3abda5e1@v4  37a1432e3abda5e1@v5  37a1432e3abda5e1@v6  385740b08d513c7d@v2  385740b08d513c7d@v3  451ffc6e0f865919@v2  4efd2ac23d59b455@v3  53eb6cb3e19841e4@v2  53eb6cb3e19841e4@v3  5b6a0e1b0be70f06@v2  5b6a0e1b0be70f06@v3  5e2330d5ff965f2d@v2  691a1f1678a36b7a@v2  6d5fd2b46a000c68@v2  6f3f9b7562067b1d@v2  6f3f9b7562067b1d@v3  6f3f9b7562067b1d@v4  778567fb5097a321@v2  778567fb5097a321@v3  83abfc9472f8b529@v2  85d9d8430f79b228@v2  8b58982e1d45c5ff@v4  (+69 more)
claude-snapshots/41018af3-f5f4-4679-8edc-86a6bc7f7ac4/: 1f6fe65199b7a74a@v2  1f6fe65199b7a74a@v3  2121661887bb330f@v2  24017eeb7e8956ea@v2  24017eeb7e8956ea@v3  24017eeb7e8956ea@v4  24017eeb7e8956ea@v5  24017eeb7e8956ea@v6  24017eeb7e8956ea@v7  244fde3694917464@v2  25eb4e42246e2029@v2  25eb4e42246e2029@v3  26541f98c078e48e@v2  2dede1811657e1c9@v2  2dede1811657e1c9@v3  2dede1811657e1c9@v4  2dede1811657e1c9@v5  2dede1811657e1c9@v6  392de04095fc78ce@v2  75e86088da570825@v2  7f17fe574ce2182d@v2  7f17fe574ce2182d@v3  7f31ec9783385826@v2  889bb48d61d03d72@v2  889bb48d61d03d72@v3  9747e39407301a7a@v2  9747e39407301a7a@v3  99c02c1c1f4d9150@v2  ab63d9b73d62db55@v2  ab63d9b73d62db55@v3  b1b362953caf577b@v2  b1b362953caf577b@v3  b606ea77f46a50fc@v2  b606ea77f46a50fc@v3  b606ea77f46a50fc@v4  b606ea77f46a50fc@v5  b8d9128ced76cdd3@v2  b8d9128ced76cdd3@v3  b8d9128ced76cdd3@v4  b8d9128ced76cdd3@v5  (+9 more)
claude-snapshots/4bf1181e-5c0b-460e-bb05-b0bac1611864/: f682c6de34a35c4f@v1  f682c6de34a35c4f@v2  f682c6de34a35c4f@v3  f682c6de34a35c4f@v4
claude-snapshots/5da0cbd9-3e05-4865-8d13-c85cdfb72f97/: 03c5c38bc65001e6@v1  15a9c63b7d906a74@v2  15a9c63b7d906a74@v3  15a9c63b7d906a74@v4  1a82943b715227f4@v1  291a0487f87ce440@v1  291a0487f87ce440@v10  291a0487f87ce440@v11  291a0487f87ce440@v12  291a0487f87ce440@v13  291a0487f87ce440@v14  291a0487f87ce440@v15  291a0487f87ce440@v16  291a0487f87ce440@v17  291a0487f87ce440@v18  291a0487f87ce440@v19  291a0487f87ce440@v2  291a0487f87ce440@v20  291a0487f87ce440@v21  291a0487f87ce440@v22  291a0487f87ce440@v3  291a0487f87ce440@v4  291a0487f87ce440@v5  291a0487f87ce440@v6  291a0487f87ce440@v7  291a0487f87ce440@v8  291a0487f87ce440@v9  4efd2ac23d59b455@v1  4efd2ac23d59b455@v2  5b6a0e1b0be70f06@v1  6080080b03f669eb@v1  696ed0b67c4fd227@v1  696ed0b67c4fd227@v3  696ed0b67c4fd227@v4  696ed0b67c4fd227@v5  696ed0b67c4fd227@v6  696ed0b67c4fd227@v7  6ec53308e524efa2@v1  7a6121fefb5ebb95@v1  7a6121fefb5ebb95@v2  (+96 more)
claude-snapshots/6afa2538-22e4-4b34-bbdd-6e885163e811/: 47b28ee1fb38a530@v2  (+8 more)
docs/: ARCHITECTURE.md  DEVICE_SELECTION.md  Stemperator_Session_Notes.md
lang/: i18n.lua
legacy/: CMakeLists.txt
scripts/: DAW_INTEGRATION.md  install.ps1  install.sh  setup_demucs.sh
(+534 files in other folders)
